tests/ui/bits_buckets_mismatch_full.rs
use light_bitmap::{bucket_count, BitMap};

const BITMAP: BitMap<9, { bucket_count(8) }> = BitMap::const_full();

fn main() {}
